--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,8 @@
    },
    "outputs": [],
    "source": [
-    "number = \"7285553334\" # 728"
+    "number = \"7285553334\" # 728\n",
+    "num"
    ]
   },
   {
