--- a/index.ipynb
+++ b/index.ipynb
@@ -266,14 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'728'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number = \"7285553334\" # 728\n",
-    "number[:3]\n"
+    "number[:3]"
    ]
   },
   {
